# erpnext-for-me

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
deployment/: .env.example  Dockerfile  docker-compose.yml  mariadb.cnf  运维手册.md
deployment/nginx/: default.conf
deployment/offline/: deploy-china-baremetal.sh  pack-offline-bundle.sh  setup-china-mirrors.sh
deployment/scripts/: init.sh  manage.sh  server-init-centos.sh
docs/: 二次开发说明.md  用户使用说明.md  管理员手册.md  部署指南.md
electron/: README.md  build-with-ip.sh  deploy-lan.bat  main.js  package.json  server.json
patches/: banking-ui-chinese-optimization.patch
starmake/: hooks.py  install.py  modules.txt  setup_wizard.py
starmake/buying/: purchase_hooks.py
starmake/crm/: crm_hooks.py
starmake/excel_io/: excel_operations.py
starmake/finance/: finance_hooks.py
starmake/fixtures/: buying_property_setter.json  custom_field.json  print_format.json  property_setter.json  roles.json  selling_property_setter.json
starmake/manufacturing/: production_hooks.py
starmake/master_data/: excel_template.py  import_export.py
starmake/master_data/tests/: test_import_export.py
starmake/permissions/: backup.py  backup_guide.py  role_setup.py
starmake/print_templates/formats/: delivery_note.html  item_label.html  purchase_order.html  purchase_receipt.html  sales_order.html  stock_entry.html  work_order.html
starmake/project/: project_hooks.py
starmake/public/css/: starmake.css
starmake/selling/: sales_hooks.py
starmake/stock/: stock_hooks.py
(+17 files in other folders)
